[package]
name = "railyard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ry"
path = "src/main.rs"

[dependencies]
owo-colors = "4.2.1"
indicatif = "0.17"
num_cpus = "1.0"
tokio = { version = "1.45.0", features = [
    "rt",
    "process",
    "macros",
    "sync",
    "io-util",
    "io-std",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
] }
clap = "4.5.40"
toml_edit = "0.22.27"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }

[features]
default = ["just"]
just = ["dep:serde", "dep:serde_json"]
